# GSAMnet

./: .gitignore  MANIFEST.in  README.md  description.md  main.ipynb  prueba.py  prueba2.ipynb  pyproject.toml  requirements.txt  setup.py
code/DataSets/Mamitas_Thermal_Dataset/: Mamitas_Dataset.py  infrared_thermal_feet.py
code/DataSets/Mamitas_Thermal_Dataset/convRFFds/: data.py  train.py
code/DataSets/Thermal_Feet_DataSet/convRFFds/: README.md
code/Metrics/: Metrics.py
code/SAM-LangDino/groundingdino/: main.py
code/SAM-LangDino/groundingdino/models/: __init__.py
code/SAM-LangDino/groundingdino/util/: inference.py  point_ops.py  utils.py
code/SAM_LangDino/: main.ipynb  main.py
code/SAM_LangDino/groundingdino/: SamLangDino.py
code/SAM_LangDino/groundingdino/models/: __init__.py
code/SAM_LangDino/groundingdino/util/: inference.py  utils.py
notebooks/: predict.ipynb
scripts/: install_deps.py
src/DataSets/: getdata.py
src/DataSets/Mamitas_Thermal_Dataset/: Mamitas_Dataset.py  kaggle.json
src/LangSAM/: SamLangDino.py  main.py  prueba.py  utils.py
src/Metrics/: Metrics.py
src/groundingdino/: README.md  __init__.py
src/groundingdino/datasets/: transforms.py
src/groundingdino/models/GroundingDINO/: groundingdino.py
src/groundingdino/util/: inference.py  utils.py
src/groundino_samnet/: gsam_combined.py  model.py  utils.py  visuals.py
src/segment_anything1/: config.py  predictor.py
src/segment_anything2/: README.md  config.py
src/segment_anything2/sam2/: sam2_image_predictor.py
src/segment_anything2/sam2_configs/: config.py
(+62 files in other folders)
