[tool.poetry]
name = "LangSam"
version = "0.1.0"
description = "SAM model with GroundingDINO"
authors = ["Wilhelm Buitrago <wibuitragog@unal.edu.co>"]

[tool.poetry.dependencies]
python = "3.10.12"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[tool.poetry.scripts]
post_install = "scripts.install_deps:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
